--- a/styles/new.css
+++ b/styles/new.css
@@ -28,7 +28,7 @@ border: none;
 }
 .center{
     margin: 0% auto;
-    max-width: 896px;
+    max-width: 1000px;
 }
 
 
@@ -72,7 +72,7 @@ align-items: center;
 gap: 64;
 padding: 56px 70px 56px 70px;
 border-radius: 20px;
-margin-bottom: 50px;
+margin-bottom: 60px;
 }
 .banner-sub-title{
     color: rgba(14, 14, 14, 0.5);
@@ -99,10 +99,13 @@ text-align: left;
     width: 325px;
 }
 /* start failler section */
+.pillar-section{
+    margin-bottom: 56px;
+}
 .pillar-container{
     display: flex;
     gap: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 50px; */
     border-radius: 20px;
 }
 .pillar-container>.mini-div{
@@ -147,4 +150,125 @@ font-weight: 400;
 line-height: 24px;
 letter-spacing: 0%;
 text-align: left;
+}
+/* start future style section */
+.future-section-title{
+    color: rgba(14, 14, 14, 1);
+
+font-family: Fira Sans;
+font-size: 28px;
+font-weight: 700;
+line-height: 100%;
+letter-spacing: 0%;
+text-align: left;
+}
+.future-section-discription{
+    color: rgba(14, 14, 14, 0.7);
+
+font-family: Fira Sans;
+font-size: 13px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 25px;
+}
+.mini-div-title{
+    color: rgba(14, 14, 14, 0.8);
+
+font-family: Fira Sans;
+font-size: 20px;
+font-weight: 700;
+line-height: 100%;
+letter-spacing: 0%;
+text-align: left;
+}
+.mini-div-discription{
+    color: rgba(14, 14, 14, 0.7);
+
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+}
+.mini-btn{
+    color: rgba(255, 255, 255, 1);
+
+font-family: Fira Sans;
+font-size: 12px;
+font-weight: 600;
+line-height: 100%;
+letter-spacing: 0%;
+text-align: left;
+}
+.future-mni-btn-1{
+    background-color: rgba(84, 144, 245, 1);
+    padding: 9px 14px 7px 14px;
+    border: none;
+    border-radius: 5px;
+}
+.future-mni-btn-2{
+    background-color:rgba(9, 161, 92, 1);
+    padding: 9px 14px 7px 14px;
+    border: none;
+    border-radius: 5px;
+}
+.future-mni-btn-3{
+    background-color: rgba(255, 194, 57, 1);
+    padding: 9px 14px 7px 14px;
+    border: none;
+    border-radius: 5px;
+}
+.future-mini-div-1{
+    background: rgba(84, 144, 245, 0.2);
+    padding: 22px;
+    border-radius: 12px;
+}
+.future-mini-div-2{
+    background: rgba(198, 228, 214, 1);
+    padding: 22px;
+    border-radius: 12px;
+}
+.future-mini-div-3{
+    background: rgba(247, 235, 207, 1);
+    padding: 22px;
+    border-radius: 12px;
+}
+.future-section-container{
+    display: flex;
+    gap: 16px;
+}
+/* start question section */
+.question-section{
+    background: rgba(255, 255, 255, 1);
+    border-radius: 13px;
+    padding: 25px 20px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    margin-top: 30px;
+    background-image: url("../assets/quote-bg.png");
+    background-repeat: no-repeat;
+    background-position: 20px 20px;
+}
+.question-section-discription{
+    color: rgba(14, 14, 14, 0.8);
+
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+}
+.question-title{
+    color: rgba(14, 14, 14, 0.8);
+
+font-family: Fira Sans;
+font-size: 20px;
+font-weight: 600;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 0px;
 }
