--- a/styles/new.css
+++ b/styles/new.css
@@ -406,3 +406,35 @@ border: 1px solid lightcyan;
     text-align: center;
 }
 /* subscrib section */
+.input-submit{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+
+}
+.input-email{
+    width: 60%;
+    /* text-align: center; */
+    /* height: 50%; */
+    padding: 20px 5px;
+    border-radius: 6px 0px 0px 6px;
+    border: 1px solid lightgray;
+}
+.subscribe{
+    background-color: rgba(0, 106, 80, 1);
+    padding: 21px 30px;
+    color: rgba(255, 255, 255, 1);
+    border: none;
+    border-radius: 0px 6px 6px 0px;
+
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 600;
+line-height: 100%;
+letter-spacing: 0%;
+text-align: left;
+}
+.input-submit{
+    text-align: justify;
+}
