--- a/styles/new.css
+++ b/styles/new.css
@@ -396,7 +396,7 @@ border: 1px solid lightcyan;
     margin-bottom: 20px;
 }
 .input-button{
-    width: 85%;
+    max-width: 85%;
     border-radius: 8px;
     padding: 20px 40px 20px 40px;
     text-align: center;
